<resources>
    <string name="app_name">TelU-Event</string>
    <string name="text_telkom">Telkom University</string>
    <string name="text_telkom2">Event Apps</string>
    <string name="version_text">Version 1.0</string>
    <string name="signup_text">Signup Account</string>
    <string name="fullname_text">Full Name</string>
    <string name="username_text">Email</string>
    <string name="password_text">Password</string>
    <string name="btnSignup">Sign up</string>
    <string name="signin_text">Sigin Account</string>
    <string name="btnSignin">Sign in</string>
    <string name="btnSignin_signup">Sign up</string>
    <string name="or_text">OR</string>
    <string name="belum_text">Jika belum memiliki akun!</string>
    <string name="email_empty">Email tidak boleh kosong</string>
    <string name="email_invalid">Email tidak valid</string>
    <string name="password_empty">Password tidak boleh kosong</string>
    <string name="password_invalid">Password tidak valid</string>
    <string name="password_less">Password minimal 6 huruf</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Schedule</string>
    <string name="title_notifications">Profile</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
        It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="title_addEvent">Add Event</string>
</resources>