<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_homeAdmin">

    <fragment
        android:id="@+id/navigation_homeAdmin"
        android:name="org.tryhard.teluevent.ui.home.HomeAdminFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home_admin" />

    <fragment
        android:id="@+id/navigation_schedule"
        android:name="org.tryhard.teluevent.ui.schedule.ScheduleFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_schedule" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="org.tryhard.teluevent.ui.profile.ProfileFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_addEvent"
        android:name="org.tryhard.teluevent.ui.addevent.AddEventFragment"
        android:label="@string/title_addEvent"
        tools:layout="@layout/fragment_add_event" />
</navigation>